# conflux

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ui  README.md  SECURITY.md  conflux.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_default_orchestrator_agent.py  0003_tool_configs.py  0004_user_workspaces.py  0005_user_persona_files.py  0006_telegram_links.py  0007_mcp_servers.py  0008_schedules.py  0009_sso_settings.py  0010_session_compression.py  0011_fts_search.py  0012_trajectories.py  0013_run_is_undone.py  0014_personality_preset.py  0015_add_user_onboarding_completed.py  0016_wiki_system.py  0017_agent_wiki_rag.py  0018_wiki_page_extra_fields.py  0019_user_view_as_settings.py  0020_system_settings.py  0021_request_traces.py  0022_audit_events.py  0023_improvement_pipeline.py  0024_discord.py  0025_discord_id_defaults.py
conflux/: __init__.py  workers.py
conflux/agents/: __init__.py  base.py  colony.py  compression.py  loop.py  orchestrator.py
conflux/api/: auth.py  deps.py  main.py
conflux/channels/: discord_bot.py  telegram.py  voice.py
conflux/cli/: main.py
conflux/core/: cache.py  config.py  database.py  events.py  logging.py  vector.py  workspace.py
conflux/integrations/: __init__.py  mcp.py  skillsmp.py
conflux/learning/: __init__.py  evolution.py  pattern_detector.py  reflection.py  skill_evaluator.py  tracer.py
conflux/memory/: __init__.py  manager.py
conflux/models/: __init__.py  agent.py  audit.py  base_mixin.py  discord_guild.py  learning.py  mcp.py  memory.py  provider.py  schedule.py  session.py  skill.py  sso_provider.py  system_settings.py  tenant.py  tool.py  traces.py  (+3 more)
docker/: dragonfly-compose.yaml  postgres-compose.yaml  qdrant-compose.yaml  whisper-compose.yaml
docs/: adaptive_learning.md  features.md  synapse.md
scripts/: test_synapse.py
searxng-config/: settings.yml
ui/: next.config.ts  package-lock.json  package.json  proxy.ts
(+265 files in other folders)
