[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conflux"
version = "0.1.0"
description = "Conflux — Multi-user, self-learning AI Agent Harness"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache / job queue (DragonflyDB is Redis-compatible)
    "redis[hiredis]>=5.2.0",
    "arq>=0.26.1",
    # Vector store
    "qdrant-client[fastembed]>=1.12.0",
    # Config
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # LLM providers (OpenAI-compatible)
    "openai>=1.57.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    # CLI
    "typer>=0.15.1",
    "rich>=13.9.0",
    # Utilities
    "anyio>=4.7.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.11",
    "python-slugify>=8.0.4",
    "structlog>=24.4.0",
    "croniter>=2.0.7",
    # Telegram channel
    "python-telegram-bot>=21.7",
    # Voice / STT
    "aiohttp>=3.11.0",
    # Voice / TTS (Microsoft Azure Neural voices via edge-tts)
    "edge-tts>=7.0.0",
    # WebSocket / SSE
    "sse-starlette>=2.1.3",
    # MCP
    "mcp>=1.0.0",
    "agentmail>=0.5.0",
    "pypdf>=6.12.1",
    "discord-py>=2.4",
]

[project.scripts]
conflux = "conflux.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["conflux"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
